Attempted image alignment fix

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -199,9 +199,9 @@
 
 .PE_image {
   display: inline-block;
-  height: 50px;
-  width: 50px;
-  margin: 25px;
+  height: 100%;
+  width: auto;
+  margin: 3px;
 }
 
 .PE_p {
